# fabprint

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cloud-bridge  Dockerfile.orca-base  LICENSE  README.md  SECURITY.md  docker-compose.yml  fabprint-plan.md  pyproject.toml
.github/workflows/: ci.yml  publish-cloud-bridge.yml  slice.yml  test-pypi.yml
action/: README.md  action.yml
docs/: cli.md  cloud-http-handoff.md  cloud-print-research.md  code-cad.md  config.md  developing.md  docker-optimization-plan.md  gcode-3mf-format.md  init-command-plan.md  printers.md
docs/cloud-experiments/: README.md
docs/recordings/: demo.cast  demo.tape  init-template.cast  init.cast  init.tape  run-plate.cast
examples/: fabprint.toml
examples/gib-tuners-c13-10/: fabprint.toml
examples/gib-tuners-c13-10/output/: plate_sliced.gcode.3mf
examples/peg-multicolour/: fabprint.toml
orca-bug-repro/: painted.3mf  plain.3mf  process.json  repro.sh
scripts/: bambu_cloud_bridge.cpp  bambu_cloud_login.py  build-docker.sh  cache-bnl.sh  extract_profiles.py  record_demo.py  test_cloud_print.py  update_docker_versions.py
src/fabprint/: __init__.py  adapters.py  arrange.py  auth.py  cli.py  cloud.py  config.py  constants.py  credentials.py  docker_versions.json  gcode.py  init.py  loader.py  orient.py  pipeline.py  plate.py  printer.py  profiles.py  slicer.py  thumbnails.py  ui.py  viewer.py
src/fabprint/cloud/: __init__.py  ams.py  bridge.py  http.py
tests/: conftest.py  test_adapters.py  test_arrange.py  test_auth.py  test_cli.py  test_cloud.py  test_config.py  test_credentials.py  test_gcode.py  test_init.py  test_loader.py  test_orient.py  test_pipeline.py  test_plate.py  test_printer.py  test_profiles.py  test_slicer.py  test_ui.py  test_viewer.py
