[project]
name = "fabprint"
version = "0.1.47"
description = "Immutable 3D print pipeline: arrange, slice, and print"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "trimesh[easy]>=4.0.0",
    "rectpack>=0.2.0",
    "defusedxml>=0.7.0",
    "sf-hamilton>=1.82.0",
    "bambulabs-api>=2.6.0",
    "bambu-lab-cloud-api",
    "requests>=2.28",
]

[project.optional-dependencies]
step = ["build123d>=0.10.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "packaging>=23.0"]

[project.scripts]
fabprint = "fabprint.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
