[project]
name = "fabprint"
version = "0.1.117"
description = "Headless 3D print pipeline: arrange, orient, slice, and send to printer from a TOML config"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Paul Fremantle", email = "paul@fremantle.org"}]
keywords = ["3d-printing", "bambu", "orcaslicer", "gcode", "3mf", "slicer", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "trimesh[easy]>=4.0.0",
    "rectpack>=0.2.0",
    "defusedxml>=0.7.0",
    "sf-hamilton>=1.82.0",
    "bambulabs-api>=2.6.0",
    "bambu-lab-cloud-api",
    "requests>=2.28",
    "typer>=0.15.0",
    "build123d>=0.10.0",
    "watchfiles>=1.0.0",
    "simple-term-menu>=1.6.6",
]

[project.urls]
Homepage = "https://github.com/pzfreo/fabprint"
Repository = "https://github.com/pzfreo/fabprint"
Issues = "https://github.com/pzfreo/fabprint/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=6.0.0", "ruff>=0.4.0", "packaging>=23.0", "mypy>=1.10.0"]

[project.scripts]
fabprint = "fabprint.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# cadquery-ocp pins vtk==9.3.1 which lacks cp313 wheels;
# override to allow vtk 9.6.0+ which supports Python 3.11-3.13
override-dependencies = ["vtk>=9.4"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
